--- a/css/completedTasks.css
+++ b/css/completedTasks.css
@@ -35,8 +35,7 @@ body {
 }
 
 .title {
-  padding-left: 30%;
-  margin: 2rem;
+  text-align: center;
 }
 
 .completed-tasks-list {
@@ -73,4 +72,10 @@ body {
 .clear-history:hover {
   opacity: 0.8;
   transition: 0.3s ease-in-out;
+}
+
+@media screen and (max-width: 500px) {
+  .completed-tasks-list {
+    max-width: 80%;
+  }
 }
