--- a/css/completedTasks.css
+++ b/css/completedTasks.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   justify-content: space-between;
   margin-top: 1.5rem;
-  padding: 1.5rem;
+  padding-top: 1.5rem;
 }
 
 .home-and-tasks a {
@@ -22,6 +22,14 @@ body {
   color: rgb(82, 82, 82);
   text-decoration: underline;
   transition: 0.3s;
+}
+
+.explore-and-home {
+  display: flex;
+}
+
+.explore {
+  margin-right: 2rem;
 }
 
 .well-done {
