--- a/css/completedTasks.css
+++ b/css/completedTasks.css
@@ -84,6 +84,7 @@ body {
 
 @media screen and (max-width: 500px) {
   .completed-tasks-list {
-    max-width: 80%;
+    max-width: 100%;
+    padding: 0.5rem 0rem 0.5rem 1.5rem;
   }
 }
